--- a/style/style.css
+++ b/style/style.css
@@ -8,14 +8,19 @@
 body{
     font-family:"Inter", sans-serif ;
 }
+main{
+    background-color: black    ;
+}
 main section{
     max-width: 75% ;
     margin: 0 auto;
-    margin-bottom: 50px
+    padding: 60px 0;
+    
 }
 .sec-title{
-    font-size: ;
+    font-size: 35px ;
     font-weight: ;
+    color: white;
 }
 .paragraph{
     font-size: 13px ;
@@ -88,6 +93,7 @@ nav h3{
     justify-content: space-between;
     max-width: 75%;
     margin: 0 auto;
+   
     
     /* border:2px solid #E6533C; */
     
@@ -140,7 +146,7 @@ nav h3{
 .bnr-pic{
     position: relative;
     bottom: 0;
-    right: 0;
+    
 }
 .bnr-pic img{
     height: 100%;
@@ -269,4 +275,53 @@ nav h3{
     }
     
 }
+/* Main  */
+/* Section-1 */
+.sec-1 .sec-1-con{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    max-width: 550px;
+    margin: 0 auto;
+    margin-bottom: 70px;
+}
+.sec-1 .sec-1-des{
+    text-align: center;
+}
+.cards{
+    display: flex;
+    justify-content: space-between;
+}
+.cards .card{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    max-width: 200px;
+    gap: 6px;
+}
+.cards .card h5{
+    color: white;
+    font-size: 18px;
+}
+.cards .card p{
+    text-align: center;
+}
+.cards .card img{
+    max-width: 180px;
+    border-radius: 50%;
+}
+/* Section-1 Responsive */
+@media screen and (max-width:576px){
+    .sec-con p{
+        width: 95%;
+        margin: 0 auto;
+    }
+    .cards{
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+}
+
 
