--- a/style/style.css
+++ b/style/style.css
@@ -7,14 +7,15 @@
 }
 body{
     font-family:"Inter", sans-serif ;
+    background-color: black;
 }
 main{
     background-color: black    ;
 }
 main section{
     max-width: 75% ;
-    margin: 0 auto;
-    padding: 60px 0;
+    margin: 60px auto;
+   
     
 }
 .sec-title{
@@ -323,5 +324,48 @@ nav h3{
         gap: 30px;
     }
 }
-
-
+/* Section-2 */
+.sec-2{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 150px;
+    padding: 30px 0;
+    border-radius: 25px;
+}
+.sec-2{
+    background-color: #222222;
+}
+.sec-2-btn{
+    background-color: #E6533C;
+    padding: 12px 50px;
+}
+.sec-2-con{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 40%;
+}
+.sec-2-img{
+    width: 30%;
+}
+.sec-2-img img{
+    width: 100%;
+    border-radius: 25px;
+}
+/* Section-2 Responsive */
+@media screen and (max-width:576px){
+    .sec-2{
+        flex-direction: column;
+        gap: 20px;
+        }
+        .sec-2-con{
+            max-width: 80%;
+        }
+        .sec-2-img{
+            width: 80%;
+        }
+        .sec-2-btn{
+            width: 100%;
+        }
+    }
