--- a/style/style.css
+++ b/style/style.css
@@ -374,3 +374,123 @@ nav h3{
             width: 100%;
         }
     }
+/* Section-4  */
+.sec-4{
+    display: flex;
+    flex-direction: column;
+    
+}
+.sec-4-con{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 550px; 
+    margin: 0 auto;
+    gap: 10px;
+}
+.sec-4-des{
+    text-align: center;
+}
+.photos{
+    margin: 30px;
+    background-color: #222222;
+    border-radius: 25px;
+}
+.single-photo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.single-photo img{
+    width: 30%;
+    height: 20%;
+    
+    border-radius: 25px;
+}
+
+
+
+
+
+
+
+
+/* Footer */
+
+footer{
+    background-color: #222222;
+    
+    
+    
+}
+footer .footer-con{
+    display: flex;
+    justify-content: space-between;
+    max-width: 75%;
+    padding: 50px 0;
+    margin: 0px auto;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5) ;
+    
+}
+.part-1,.part-2{
+    max-width: 25%;
+}
+footer .part-1{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+footer .part-1 h1{
+    
+    color: #E6533C;
+    font-style: italic;
+    font-size: 40px;
+    font-weight: 800;
+}
+.part-2{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.part-2 h3{
+    font-size: 22px;
+    font-weight: 800;
+    color: white;
+}
+.part-2 .foot-des{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    font-size: 18px;
+    font-weight: 400;
+    color:rgba(255, 255, 255, 0.5) ;
+}
+footer .fitness{
+    max-width: 200px;
+    margin: 0 auto;
+    padding: 30px 0;
+   
+}
+/* Footer Responsive*/
+@media screen and (max-width:576px){
+    footer{
+        width: 100%;
+    }
+    .footer-con{
+        flex-direction: column;
+        gap: 30px;
+       width: 85%;
+        
+        /* border: 2px solid tomato; */
+        
+        
+    }
+    .part-1,.part-2{
+        max-width: 100%;
+}
+.part-2 .foot-des{
+    
+    font-weight: 300;
+    
+}
+}
